p6/tests/t050.err
Semantic error on line 1: Class 'Rectangle' does not have a parameter called 'bad_member'.
