p6/tests/t050.gpl
rectangle r(bad_member = 100);
